Add "What's this" for the tabbar and new/close buttons

There could be more, but I thik they are the most important ones.

BUG: 257914
FIXED-IN: 4.9.0